--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-dotenv": "^0.1.3",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "axios": "0.21.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-dotenv": "0.1.3",
     "react-scripts": "4.0.3",
-    "swr": "^0.5.5",
-    "typescript": "^4.1.2",
+    "swr": "0.5.5",
+    "typescript": "4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,7 +39,9 @@
     ]
   },
   "react-dotenv": {
-    "whitelist": ["secret_key"]
+    "whitelist": [
+      "secret_key"
+    ]
   },
   "devDependencies": {}
 }
